--- a/example/einstein indexing.ipynb
+++ b/example/einstein indexing.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Construct y_onehot$[i,k, j] = 1$ if $y[i,j] == k$, 0 otherwise."
+    "Construct y_onehot$[i,k, j] = 1$ if $y[i,k] == j$, 0 otherwise."
    ]
   },
   {
